Schedule API early version

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -76,7 +76,7 @@
                     <label>No</label>
 
 
-                    <h2>End Game</h2>
+                    <h2>Endgame</h2>
 
 
                     <label>Ducks delivered:</label> 
