--- a/public/dataform.html
+++ b/public/dataform.html
@@ -21,17 +21,21 @@
                     <h2>Autonomous Mode</h2>
                     
 
-                    <p>Detected duck/TSE and dumped in shipping hub?</p>
-                    <input type="radio" name="detect" value="duck" id=2a>
-                    <label>Duck</label>
-                    <input type="radio" name="detect" value="tse" id=2b>
-                    <label>TSE</label>
-                    <input type="radio" name="detect" value="neither" id=2c>
-                    <label>Neither</label>
-                    <input type="radio" name="detect" value="both" id=2d>
-                    <label>Both</label>
+                    <p>Did they detect duck/TSE and dump in the correct area?</p>
+                    <input type="radio" name="detect" value="Dumped Correctly" id=2a>
+                    <label>Dumped in Correct Area</label>
+                    <input type="radio" name="detect" value="Dumped" id=2c>
+                    <label>Dumped</label>
+                    <input type="radio" name="detect" value="neither" id=2d>
+                    <label>neither</label>
 
-                    <p>Parked in the alliance storage unit?</p>
+                    <p>Did they spin they carousel?</p>
+                    <input type="radio" name="spin_carousel" value="yes" id="5a">
+                    <label>Yes</label>
+                    <input type="radio" name="spin_carousel" value="no" id="5b">
+                    <label>No</label>
+
+                    <p>Did they park in the alliance storage unit?</p>
                     <input type="radio" name="alliance_park_auto" value="fully" id="3a">
                     <label>Fully</label>
                     <input type="radio" name="alliance_park_auto" value="partially" id="3b">
@@ -39,7 +43,7 @@
                     <input type="radio" name="alliance_park_auto" value="no" id="3c">
                     <label >No</label>
 
-                    <p>Parked in the warehouse?</p>
+                    <p>Did they park in the warehouse?</p>
                     <input type="radio" name="warehouse_park_auto" value="fully" id="4a">
                     <label>Fully</label>
                     <input type="radio" name="warehouse_park_auto" value="partially" id="4b">
@@ -47,42 +51,59 @@
                     <input type="radio" name="warehouse_park_auto" value="no" id="4c">
                     <label >No</label>
 
-                    <p>Can spin carousel in alliance storage?</p>
-                    <input type="radio" name="spin_carousel" value="yes" id="5a">
-                    <label>Yes</label>
-                    <input type="radio" name="spin_carousel" value="no" id="5b">
-                    <label>No</label>
-
 
                     <h2>Driver Controlled</h2>
 
 
-                    <p>Can pick up elements?</p>
+                    <p>Did they pick up a game element?</p>
                     <input type="radio" name="pick_up" value="yes" id="6a">
                     <label>Yes</label>
                     <input type="radio" name="pick_up" value="no" id="6b">
                     <label>No</label>
 
-                    <p>Delivered elements in shipping hub?</p>
-                    <input type="radio" name="deliver_element" value="yes" id="7a">
+                    <p>Did they deliver an element in the alliance shipping hub?</p>
+                    <input type="radio" name="deliver_alliance" value="yes" id="7a">
                     <label>Yes</label>
-                    <input type="radio" name="deliver_element" value="no" id="7b">
+                    <input type="radio" name="deliver_alliance" value="no" id="7b">
                     <label>No</label>
 
-                    <p>Can go over barrier?</p>
+                    <p>Did they deliver an element in the shared shipping hub?</p>
+                    <input type="radio" name="deliver_shared" value="yes" id="">
+                    <label>Yes</label>
+                    <input type="radio" name="deliver_shared" value="no" id="">
+                    <label>No</label>
+
+                    <p>Did they go over the barrier?</p>
                     <input type="radio" name="barrier" value="yes" id="8a">
                     <label>Yes</label>
                     <input type="radio" name="barrier" value="no" id="8b">
                     <label>No</label>
 
+                    <p>Did they get stuck on the barrier?</p>
+                    <input type="radio" name="barrier_stuck" value="yes" id="">
+                    <label>Yes</label>
+                    <input type="radio" name="barrier_stuck" value="no" id="">
+                    <label>No</label>
 
                     <h2>Endgame</h2>
 
 
                     <label>Ducks delivered:</label> 
                     <input type="numbers" name="ducks" value= "" id=9a />
+
+                    <p>Did they cap the alliance shipping hub with TSE?</p>
+                    <input type="radio" name="tse" value="yes" id="12a">
+                    <label>Yes</label>
+                    <input type="radio" name="tse" value="no" id="12b">
+                    <label>No</label>
+
+                    <p>Can/Did the other team still cap their TSE?</p>
+                    <input type="radio" name="tse_other_team" value="yes" id="13a">
+                    <label>Yes</label>
+                    <input type="radio" name="tse_other_team" value="no" id="13b">
+                    <label>No</label>
                     
-                    <p>Parked in the alliance storage unit?</p>
+                    <p>Did they park in the alliance storage unit?</p>
                     <input type="radio" name="alliance_park_end" value="fully" id="10a">
                     <label>Fully</label>
                     <input type="radio" name="alliance_park_end" value="partially" id="10b">
@@ -90,7 +111,7 @@
                     <input type="radio" name="alliance_park_end" value="no" id="10c">
                     <label >No</label>
 
-                    <p>Parked in the warehouse?</p>
+                    <p>Did they park in the warehouse?</p>
                     <input type="radio" name="warehouse_park_end" value="fully" id="11a">
                     <label>Fully</label>
                     <input type="radio" name="warehouse_park_end" value="partially" id="11b">
@@ -98,20 +119,11 @@
                     <input type="radio" name="warehouse_park_end" value="no" id="11c">
                     <label >No</label>
 
-                    <p>Put TSE on top of shipping hub?</p>
-                    <input type="radio" name="tse" value="yes" id="12a">
-                    <label>Yes</label>
-                    <input type="radio" name="tse" value="no" id="12b">
-                    <label>No</label>
-
-                    <p>Other team can stack TSE?</p>
-                    <input type="radio" name="tse_other_team" value="yes" id="13a">
-                    <label>Yes</label>
-                    <input type="radio" name="tse_other_team" value="no" id="13b">
-                    <label>No</label>
+                    <h2>Notes</h2>
+                    <textarea rows="9" cols="50" name="notes" id=""></textarea>
 
 
-
+                    <p></p>
                     <input type="submit" value="Submit Run">
 
                 </form>
