Added more to schedule API

--- a/public/sched.html
+++ b/public/sched.html
@@ -13,7 +13,7 @@
 
                 </form>
                 <br>
-                <a href ="/api/schdule">Visit API</a>
+                <a href ="/api/schedule">Visit API</a>
                 </br>
             </body>
     </html>
