Added requirement to fill in team number and name fields

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -9,13 +9,13 @@
 
     
                     <h2>Team Information</h2>
-
+                    
 
                     <label>Team Name:</label> 
-                    <input type="text" name="team_name" value="" id=1a/>
+                    <input type="text" name="team_name" value="" id="1a" required='required'/>
 
                     <label>Team Number:</label> 
-                    <input type="text" name="team_number" value="" id=1b/>
+                    <input type="text" name="team_number" value="" id="1b" required='required'/>
 
 
                     <h2>Autonomous Mode</h2>
