Set up for matchmaking dropdown

--- a/public/sched.html
+++ b/public/sched.html
@@ -8,7 +8,13 @@
                 <form action="/api/schedule" method="POST">
 
 
+                    <h2>Schedule</h2>
                     
+
+                    <label>Team Name:</label> 
+                    <input type="text" name="team_name" value="" id="1a" required='required'/>
+                    
+
                     <input type="submit" value="View Schedule">
 
                 </form>
