--- a/public/dataform.html
+++ b/public/dataform.html
@@ -29,7 +29,7 @@
                     <input type="radio" name="detect" value="neither" id="neither" checked="true">
                     <label for="neither">Neither</label>
 
-                    <p>Did they spin they carousel?</p>
+                    <p>Did they spin the carousel?</p>
                     <input type="radio" name="spin_carousel" value="yes" id="spun_carousel">
                     <label for="spun_carousel">Yes</label>
                     <input type="radio" name="spin_carousel" value="no" id="didnt_spin_carousel" checked="true">
