working on editing schedule to show name and number

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -20,7 +20,9 @@
                     <select name="matches" id="matches" onchange="change_myselect(this.value)">
                         <option value="select">Select</option>
                     </select>
-                    <select name="team" id="teams" required="required"></select>
+                    <select name="team_number" id="team_number" required="required" onchange="setName(this.value)"></select>
+                    <input type="hidden" name="team_name" id="team_name">
+                    <p id="test"></p>
 
                     <script>
                         fetch('./api/schedule')
@@ -43,13 +45,41 @@
                               if(sel !== "select"){
                                  matches = JSON.parse(data);
                                  // document.getElementById('p1').innerHTML = sel;
-                                 document.getElementById('teams').innerHTML = 
-                                    `<option value="${matches[parseInt(sel)].blue_1}">${matches[sel].blue_1}</option>` + 
-                                    `<option value="${matches[parseInt(sel)].blue_2}">${matches[sel].blue_2}</option>` +
-                                    `<option value="${matches[parseInt(sel)].red_1}">${matches[sel].red_1}</option>` +
-                                    `<option value="${matches[parseInt(sel)].red_2}">${matches[sel].red_2}</option>`;
+                                 document.getElementById('team_number').innerHTML = 
+                                    `<option value="${matches[parseInt(sel)].blue_1.number}">${matches[sel].blue_1.name} - ${matches[sel].blue_1.number}</option>` + 
+                                    `<option value="${matches[parseInt(sel)].blue_2.number}">${matches[sel].blue_2.name} - ${matches[sel].blue_2.number}</option>` +
+                                    `<option value="${matches[parseInt(sel)].red_1.number}">${matches[sel].red_1.name} - ${matches[sel].red_1.number}</option>` +
+                                    `<option value="${matches[parseInt(sel)].red_2.number}">${matches[sel].red_2.name} - ${matches[sel].red_2.number}</option>`;
                               } else {
-                                 document.getElementById('teams').innerHTML = "";
+                                 document.getElementById('team_number').innerHTML = "";
+                              }
+                           })
+                        }
+
+                        function setName(sel) {
+                           fetch('./api/schedule')
+                           .then((res) => {
+                              return res.text();
+                           })
+                           .then((data) => {
+                              matches = JSON.parse(data);
+                              switch(document.getElementById('team_number').value){
+                                 case (matches[parseInt(sel)].blue_1.number):
+                                    document.getElementById('team_name').value = matches[parseInt(sel)].blue_1.name;
+                                    document.getElementById('test').innerHTML = document.getElementById('team_name').value;
+                                    break;
+                                 case (matches[parseInt(sel)].blue_2.number):
+                                    document.getElementById('team_name').value = matches[parseInt(sel)].blue_2.name;
+                                    document.getElementById('test').innerHTML = document.getElementById('team_name').value;
+                                    break;
+                                 case (matches[parseInt(sel)].blue_3.number):
+                                    document.getElementById('team_name').value = matches[parseInt(sel)].blue_3.name;
+                                    document.getElementById('test').innerHTML = document.getElementById('team_name').value;
+                                    break;
+                                 case (matches[parseInt(sel)].blue_4.number):
+                                    document.getElementById('team_name').value = matches[parseInt(sel)].blue_4.name;
+                                    document.getElementById('test').innerHTML = document.getElementById('team_name').value;
+                                    break;
                               }
                            })
                         }
