Schedule creater works

--- a/public/dataform.html
+++ b/public/dataform.html
@@ -5,7 +5,7 @@
         </head>
             <body>
             <h1 class = "MR.COD">MR.COD Website</h1>
-                <form action="/api/runs" method="POST" onsubmit="teamName()">
+                <form action="/api/runs" method="POST">
 
     
                     <h2>Team Information</h2>
