--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
                 <div class = "weare">
                     <p class = "team">We Are Team</p><span>MR.COD</span>
-                    <p class = "description">MR.COD is a FTC team located in Middleton, Wisconsin. Their are 8 members of team MR.COD and all of them go to Middleton Highschool.</p>
+                    <p class = "description">MR.COD is a FTC team located in Middleton, Wisconsin. Their are 8 members of team MR.COD, and all of them go to Middleton Highschool.</p>
                 </div>
                 <div class ="recent">
                     <p class = "Rec">Recent Events</p>
